opam-version: "2.0"
maintainer: "Pierre Roux <pierre.roux@onera.fr>"
version: "1.1.2+coq8.13"

homepage: "https://github.com/coq-community/paramcoq"
dev-repo: "git+https://github.com/coq-community/paramcoq.git"
bug-reports: "https://github.com/coq-community/paramcoq/issues"
license: "MIT"

synopsis: "Plugin for generating parametricity statements to perform refinement proofs"
description: """
The plugin is still in an experimental state. It is not very user friendly (lack of good error messages) and still contains bugs. But is useable enough to "translate" a large chunk of standard library.
"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {>= "8.13" & < "8.14~"}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:paramcoq"
  "keyword:parametricity"
  "keyword:ocaml module"
  "logpath:Param"
]
authors: [
  "Chantal Keller"
  "Marc Lasson"
  "Abhishek Anand"
  "Pierre Roux"
  "Emilio Jesús Gallego Arias"
  "Cyril Cohen"
  "Matthieu Sozeau"
]
